# Open-A2A

./: .env.example  .gitignore  Dockerfile.bridge  Dockerfile.federation-bridge  Dockerfile.relay  LICENSE  Makefile  NOTICE  README.md  docker-compose.deploy.yml  docker-compose.solid.yml  pyproject.toml  requirements.txt
bridge/: __init__.py  main.py
docs/: README.md
docs/en/: README.md  (+23 more)
example/: README.md  bridge_discovery_renew.py  carrier.py  consumer.py  consumer_via_relay.py  consumer_via_relay_full.py  dht_discovery_renew.py  discovery_demo.py  discovery_dht_demo.py  merchant.py  multi_merchant_demo.py  profile.json  relay_e2e_verify.py  upload_profile_to_solid.py
federation/: README.md  subject_bridge.py
open_a2a/: __init__.py  agent.py  broadcaster.py  discovery.py  discovery_dht.py  discovery_nats.py  identity.py  intent.py  opslog.py  preferences.py  transport.py  transport_encrypt.py  transport_nats.py  transport_relay.py
relay/: __init__.py  main.py
scripts/: bench_abc_latency.py  bench_consumer_first_offer.py  diagnose-node-x.sh  e2e-bridge-directory-registry.sh  e2e-bridge-pathb.sh  e2e-dht-bootstrap.sh  setup-node-x.sh  setup-openclaw-bridge-baremetal.sh  setup-openclaw-bridge.sh
site/: index.html  styles.css
spec/: rfc-001-intent-protocol.md  rfc-002-discovery.md  rfc-003-relay-transport.md  rfc-004-identity-and-trust.md
tests/: __init__.py  test_bridge_redis_registry.py  test_bridge_redis_true_flow.py  test_discovery.py  test_federation_dedupe_persist.py  test_federation_subject_bridge_e2e.py  test_import.py  test_relay_allowlist.py  (+1 more)
(+67 files in other folders)
