[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-a2a"
version = "0.1.0"
description = "Open Agent-to-Agent Protocol - Decentralized AI Agent Collaboration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Open-A2A Contributors"}]
keywords = ["agent", "a2a", "decentralized", "nats", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nats-py>=2.6.0",
]

[project.optional-dependencies]
identity = [
    "didlite>=0.2.4",
]
solid = [
    "solid-file>=0.2.0",
]
bridge = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://github.com/open-a2a/open-a2a#readme"
Repository = "https://github.com/open-a2a/open-a2a"

[tool.setuptools.packages.find]
include = ["open_a2a*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
